Changes since version 1.1.1
---------------------------

- Fixed a bug in the slice2java code generator: tie classes were
  not generated correctly for operations with an "amd" metadata
  directive.

- Fixed a bug where Ice would print a dispatch warning for
  Ice::RequestFailedException even if the Ice.Warn.Dispatch property was
  set to 1.

- Added per-proxy contexts. The change is source-code compatible
  with the previous approach, that is, it is still possible to
  pass an explicit Ice::Context to an operation call as an additional,
  trailing parameter. However, IceProxy::Ice::Object now contains two
  new operations:

  - ice_getContext()

    This returns the context currently associated
    with a particular proxy by value. (By default,
    the context associated with proxies is empty.)

  - ice_newContext(const ::Ice::Context& context)

    This creates a new proxy that is associated with
    the passed context. Thereafter, calls via the
    new proxy always pass the context that was passed
    to ice_newContext() when that proxy was created.

  The net effect of this is that it is now possible
  to establish the context for a proxy once and, thereafter,
  have that same context sent automatically whenever an
  operation is invoked via the proxy (instead of having to
  pass an explicit context parameter on every call).

- Added Ice::Properties::parseIceCommandLineOptions(). This operation
  converts to properties all options that start with one of the
  following prefixes: --Ice, --IceBox, --IcePack, --IcePatch,
  --IceSSL, --IceStorm, --Freeze, and --Glacier.

- Added ice_clone() member function to non-abstract
  classes. ice_clone() polymorphically copies a class instance. The
  copy is a deep copy for all types except for class members; class
  members are copied shallow, that is, if a class contains a class
  member, the original and the clone contain a Ptr that points at the
  same single class instance.
