@@ -1,6 +1,9 @@
 Changes since version 1.1.1
 ---------------------------
 
+- Fixed a bug in the slice2java code generator: if a parameter
+  was named "current", illegal code was generated.
+
 - Fixed a bug in the slice2java code generator: tie classes were
   not generated correctly for operations with an "amd" metadata
   directive.
